# PixelDoodle

./: .gitignore  README.md  fix_all.py  fix_syntax.py  fix_syntax2.py  main.py  package-lock.json  package.json  render.yaml  requirements.txt  tsconfig.json
.githooks/: post-push
.windsurf/rules/: yourrules.md
backend-rs/: Cargo.toml
backend-rs/src/: app.rs  color.rs  device.rs  engine.rs  export.rs  lib.rs  main.rs  palette.rs  types.rs
backend-rs/tests/: api_smoke.rs  device_api.rs  engine_parity.rs  export_parity.rs  generate_parity.rs  generate_runtime.rs  jpeg_decoder_probe.rs  runtime_without_python.rs  wasm_parity.rs
certs/: localhost-cert.pem  localhost-key.pem  openssl-local.cnf
core/: ble_export.py  serial_export.py
docs/archive/2026-04-08-brightness-before-frontend-removal/: README.md
docs/archive/2026-04-08-pre-local-processing-v9/: README.md
docs/archive/2026-04-09-weapp-server-fallback/: README.md  env.ts.snapshot  local-generation.ts.snapshot  pattern-service.ts.snapshot
docs/archive/2026-04-10-pre-v11/: README.md
docs/superpowers/plans/: 2026-04-01-taro-h5-restoration.md  2026-04-01-taro-rn-android-extension.md  2026-04-07-bluetooth-first-no-qr.md  2026-04-07-persistent-brightness-control.md  (+1 more)
firmware/: compile_commands.json  platformio.ini
firmware/include/: Hub75ReferenceConfig.h
firmware/src/: main.cpp
firmware/tools/: generate_chinese_pixels.py
frontend-local/src/: benchmark.ts  ts-engine.ts  ts-worker.ts  wasm-worker.ts
frontend-taro/: babel.config.js  index.js  package-lock.json  package.json  project.config.json  rn-cli.config.js  tsconfig.json  vitest.config.ts
frontend-taro/android/: settings.gradle
frontend-taro/config/: dev.ts  index.ts  prod.ts  rn.ts
frontend-taro/scripts/: sync-local-wasm-assets.js  sync-weapp-project-config.js
frontend-taro/src/: app.config.ts  app.scss  app.tsx  index.html
scripts/: build-local-processing.mjs
static/: app.js  i18n.js  style.css
static/local-processing/: ts-worker.js  wasm-worker.js
templates/: index.html
tools/parity/: device_bridge.py  export_baseline.py  generate_baseline.py
wasm-engine/: Cargo.toml
wasm-engine/src/: engine.rs  lib.rs  palette.rs
(+165 files in other folders)
