[package]
name = "beadcraft-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend_rs"
path = "src/lib.rs"

[[bin]]
name = "beadcraft-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower = "0.5"
http = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
