[package]
name = "beadcraft-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crc32fast = "1"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
thiserror = "2"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
